tests/golden/resources/airlock-microgateway-operator/airlock-microgateway-operator/02_resources/01_gateway_classes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: airlock-microgateway
spec:
  controllerName: microgateway.airlock.com/gatewayclass-controller
  parametersRef:
    group: microgateway.airlock.com
    kind: GatewayParameters
    name: params
    namespace: airlock
