tests/golden/resources/airlock-microgateway-operator/airlock-microgateway-operator/02_resources/01_gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    test: xy
  name: gateway-1
  namespace: airlock
spec:
  gatewayClassName: airlock-microgateway
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
